# Local-Coding-Agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
benchmarks/results/main-benchmark-repro-2026-06-07/: DATA_PROVENANCE.md  pico-benchmark-core-report.md
docs/review-pack/: README.md
pico/evaluation/: metrics.py
tests/: test_metrics.py
