[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-coding-agent"
version = "0.1.0"
description = "Local terminal coding agent for repository-grounded engineering tasks"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
pico = "pico.cli:main"
local-coding-agent = "pico.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.4.4",
]

[tool.setuptools.packages.find]
include = ["pico*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
